fonts fixed in scene 4, tried fixing alignment in 6

--- a/css/codepenstyle2.css
+++ b/css/codepenstyle2.css
@@ -399,7 +399,7 @@ header {
 #scene4 #onceupon10 {
   opacity: 0;
   position: absolute;
-  top: 60%;
+  top: 70%;
   left: 70%;
   width: 40%;
   -webkit-transform: translateY(-60%);
@@ -460,6 +460,19 @@ header {
 /*  left: 50%;
   width: 50%;*/
   -webkit-transform: translateY(-50%);
+}
+
+#scene5 #onceupon11-1{
+
+  
+  opacity: 0;
+  position: absolute;
+  top: 30%;
+  left: 60%;
+  text-align: right;
+  /*width: 90%;*/
+  -webkit-transform: translateY(-60%);
+
 }
 
 
@@ -529,21 +542,22 @@ header {
 }
 #wipe #fire1{
   width: 25%;
+  height: 25%;
   left: 67.5%;
-  top: 42.5%;
+  top: 45%;
   z-index: 1;
 
 }
 #wipe #redbg{
-  width: 30%;
-  left: 65%;
-  top: 33% ;
+  width: 27%;
+  left: 68%;
+  top: 40% ;
 /*  z-index: -20;*/
 
 }
 #wipe #legs{
   width: 20%;
-  top: 42%;
+  top: 44%;
   left: 70%;
 
 }
